# 2022-assignment-pandas

./: Untitled.ipynb  pandas_questions.py  pyproject.toml  requirements.txt  test.ipynb  test_pandas.ipynb  test_pandas_questions.py  tests_notebook.ipynb
data/: dep_and_regions.csv  question_2.csv
